# cognitive-soccer-ml

./: .gitignore  CITATION.cff  Makefile  README.md  install.sh  main.py  pyproject.toml  requirements.txt  run_pipeline.py
best_param/Acuracia_Go/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Acuracia_nogo/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Acuracia_nogo_Capacidade_de_rastreamento/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Acuracia_nogo_Capacidade_de_rastreamento_Flexibilidade_cognitiva_(B-A)/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Acuracia_nogo_Flexibilidade_cognitiva_(B-A)/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Capacidade_de_rastreamento/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Capacidade_de_rastreamento_Flexibilidade_cognitiva_(B-A)/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_Go_Flexibilidade_cognitiva_(B-A)/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_nogo/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_nogo_Capacidade_de_rastreamento/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_nogo_Capacidade_de_rastreamento_Flexibilidade_cognitiva_(B-A)/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Acuracia_nogo_Flexibilidade_cognitiva_(B-A)/: gc_parametros.csv  gf_parametros.csv  gs_parametros.csv  sg_parametros.csv
best_param/Memory_span/: gc_parametros.csv  (+3 more)
data/: Dataset_cog_clusters.csv
docs/: DATA_DICTIONARY.md  README.pt.md
results_CV/: Dp_gc.xlsx  Dp_gf.xlsx  Dp_gs.xlsx  Dp_sg.xlsx  Medias_gc.xlsx  Medias_gf.xlsx  Medias_gs.xlsx  Medias_sg.xlsx  Tabela_sport_science.xlsx  gc_resultados_3.xlsx  gc_resultados_3_kruskal_stats.xlsx  gf_resultados_3.xlsx  gf_resultados_3_kruskal_stats.xlsx  gs_resultados_3.xlsx  gs_resultados_3_kruskal_stats.xlsx  sg_resultados_3.xlsx  sg_resultados_3_kruskal_stats.xlsx
src/: Best_MLmodels_figure.py  Cluster_figure.py  Compare_cog_figure.py  Complete_trainning.py  Cross_validation.py  Generate_MLmodels_reports.py  GridSearch.py  LOO_confusion_matrix.py  NestedCV_confusion_matrix.py  Pre_processing.py  Statistics_top3_models.py  __init__.py  cluster_figure.py  compare_cog_figure.py  data_preprocessing.py  generate_ml_models_reports.py  hyperparameter_tuning.py  loo_validation.py  nested_cv_confusion_matrix.py  nested_cv_evaluation.py  pipeline.py  plot_best_models.py  save_models.py  statistics_top3_models.py  train_final_models.py  validate_overfitting.py
tests/: __init__.py  test_imports.py  test_models_dir.py  test_reproducibility.py
(+444 files in other folders)
