[project]
name = "cognitive-soccer-ml"
version = "0.1.0"
description = "Machine learning approach to predict player effectiveness in small-sided soccer games from cognitive functions"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "imbalanced-learn",
    "xgboost",
    "openpyxl",
    "statsmodels",
    "joblib",
    "yellowbrick",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
]
upscaler = [
    "diffusers",
]

[project.scripts]
vaila = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
# Workspace configuration if needed

[tool.ruff]
# Ruff configuration
# See https://docs.astral.sh/ruff/configuration/
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "build",
    "dist",
    ".uv",
    "uv.lock",
]

[tool.ruff.lint]
# Enable specific rule sets (NPY = NumPy deprecations/legacy, ideal para código científico)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "NPY", # NumPy: deprecated functions, legacy random, numpy2 deprecations
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "N806",  # Variable in function should be lowercase (scientific code uses X, Y, F, etc.)
    "N803",  # Argument name should be lowercase (same)
]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules for specific file patterns
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"*.pyi" = ["E501"]  # Allow long lines in type stubs

[tool.ruff.format]
# Formatting options
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

# https://docs.astral.sh/ty/ — type checker (Astral). Para "strict": use [tool.ty.rules] all = "error" quando o projeto estiver limpo.
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [".git", ".venv", "__pycache__", "*.pyc", "build", "dist", ".uv", "uv.lock"]

# Regras por severidade (error = falha do ty check). Quando reduzir diagnósticos, pode ativar: all = "error"
# [tool.ty.rules]
# all = "warn"
